<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_job"
        android:textSize="18sp"
        android:padding="16dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/searchEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_job_here"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="8dp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/locationEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_location"
        android:drawableStart="@drawable/ic_baseline_location_24"
        android:drawablePadding="8dp"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/full_time"
            android:textSize="16sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/fullTimeSwt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/applyFilterBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_filter"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

</LinearLayout>